# Spotifly

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  release.sh
.claude/commands/: release.md
Spotifly/: AudioRenderer.swift  DebugLog.swift  KeychainManager.swift  Spotifly.entitlements  SpotiflyApp.swift  SpotifyAuth.swift  SpotifyPlayer.swift  SpotifySession.swift  WindowState.swift
Spotifly.xcodeproj/: project.pbxproj
Spotifly/Models/: NavigationDestination.swift
Spotifly/Spotifly.icon/: icon.json
Spotifly/SpotifyAPI/: APITypes.swift  SpotifyAPI+Albums.swift  SpotifyAPI+Artists.swift  SpotifyAPI+Player.swift  SpotifyAPI+Playlists.swift  SpotifyAPI+Search.swift  SpotifyAPI+Tracks.swift  SpotifyAPI+User.swift  SpotifyAPI.swift
Spotifly/Store/: AppStore.swift  Entities.swift  EntityConversions.swift
Spotifly/ViewModels/: AuthViewModel.swift  NavigationCoordinator.swift  PlaybackViewModel.swift  TrackLookupViewModel.swift
Spotifly/Views/: AlbumDetailView.swift  AlbumsListView.swift  ArtistDetailView.swift  ArtistsListView.swift  ContentView.swift  FavoritesListView.swift  KeyboardShortcuts.swift  LoggedInView.swift  NowPlayingBarView.swift  PlaylistDetailView.swift  PlaylistsListView.swift  (+11 more)
SpotiflyTests/: SpotiflyTests.swift
SpotiflyUITests/: SpotiflyUITests.swift  SpotiflyUITestsLaunchTests.swift
docs/: SPOTIFY_CONNECT_PROTOCOL.md  librespot-connections.md  network-session-stability-plan.md
rust/: Cargo.toml  build.sh
rust/include/: module.modulemap  spotifly_rust.h
rust/src/: lib.rs  proxy_sink.rs
(+20 files in other folders)
