[package]
name = "spotifly-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "spotifly_rust"
crate-type = ["staticlib"]

[dependencies]
librespot-core = { path = "../../librespot/core" }
librespot-connect = { path = "../../librespot/connect" }
librespot-playback = { path = "../../librespot/playback" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
once_cell = "1.19"
serde_json = "1.0"
librespot-protocol = { path = "../../librespot/protocol" }
protobuf = "3"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
